--- a/.travis.yml
+++ b/.travis.yml
@@ -48,12 +48,9 @@ matrix:
 
     # Testing other channels
     - env: TARGET=x86_64-unknown-linux-gnu
-      rust:
-        - beta
-        - nightly
-    #- env: TARGET=x86_64-apple-darwin
-    #  os: osx
-    #  rust: nightly
+      rust: beta
+    - env: TARGET=x86_64-unknown-linux-gnu
+      rust: nightly
 
 before_install: set -e
 
